--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 id="name">Carolina Velloso</h1>
+<h1 id="name">KRISHNITHA</h1>
   <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAe7AAAAJDgzYWY2ZTkwLTRhYTItNDUwYS05YmI4LTU2ZDQyNzkzMzYxYw.jpg" alt="A headshot of Carolina Vellloso"/>
                                                           <h2>carolspvelloso@yahoo.com / 301-787-8107</h2>
 
